# dmx-compressor

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  NOTICE  README.md  RELEASE.md  device_map.py  pyproject.toml  run.sh  run_experiments.sh  setup.py
.github/workflows/: cicd.yaml  default-test-workflow.yaml  python-app.yml
configs/: corsair_bert_test.yaml  corsair_cnns.yaml  corsair_cnns_0.yaml  corsair_cnns_1.yaml  corsair_cnns_2.yaml  corsair_cnns_3.yaml  corsair_cnns_4.yaml  corsair_empty.yaml  corsair_mnist_lenet.yaml  corsair_transformers.yaml  dmx_example_config_lenet5.yaml  lenet_test.yaml
docs/: api.rst  conf.py  dmx.compressor.rst  index.rst  mltools.dmx.rst  modules.rst  numerics.rst  opgraphs.rst  requirements.txt
docs/notebooks/: basic_usage.ipynb  calibration.ipynb  gptq.ipynb  hf_usage.ipynb
docs/scripts/: qdq_doc_string.py  qdq_graphs.py
docs/source/_templates/: custom-module-template.rst
examples/: advanced_recipe_norm_calibration.ipynb  advanced_recipe_norm_slanc.ipynb  advanced_recipe_quantization.ipynb  advanced_recipe_whisper_norm_slanc.ipynb  calling_quantized_submodules.ipynb  clip_mlref_basic_mode.ipynb  clip_with_alternative_conv2d.ipynb  generation_opt.py  model_calibration.py  plugins_usage_example.py  submodule_forward_customnet.py  submodule_forward_gpt2.py  submodule_forward_llama.py  torch_export_example.ipynb  whisper_with_alternative_conv1d.ipynb  whisper_with_alternative_conv1d_scatter.ipynb  whisper_with_alternative_conv1d_unfold.ipynb
examples/benchmarking/: README.md  benchmark.py  benchmark_clip.py  benchmark_llama.py
reference/: dmir.py
scripts/: demo_lowrank_weight.py  dump_mnist_mlp_dmir0.py  evaluate_glue_bert.py  evaluate_mnist_bert_style_ffn.py  evaluate_mnist_mlp.py  evaluate_squad.py  run_cifar.py  run_glue.py  run_imagenet.py  run_mnist.py  run_qa.py  run_squad.py  trainer_qa.py
src/: __init__.py  approximate.py  corsair.py  data.py  dmir.py  functions.py  numerical.py  sparse.py  utils.py
src/compressor/: __init__.py  layer_reconstruction.py
src/compressor/dmx/: model.py
src/compressor/numerical/: observer.py
src/compressor/utils/: __init__.py  visualization.py
src/corsair/: __init__.py  nn.py  transform.py
src/dmx/compressor/: __init__.py  advanced_recipe.py  layer_reconstruction.py  perf_proxy.py  plugins.py  sparse.py
src/mltools/: __init__.py  approximate.py  data.py  dmir.py  functions.py  layer_reconstruction.py  numerical.py  sparse.py
src/mltools/corsair/: __init__.py  nn.py  transform.py
src/models/: bert_style_ffn.py  lenet.py
src/utils/: __init__.py  dmir.proto  dmir_pb2.py
tests/: __init__.py  test_additional_mappings.py  test_apply_rope.py  test_batchnorm2d.py  test_benchmark.py  test_bernoulli.py  test_bfp.py  test_bfp_ptq.py  test_const.py  test_conv.py  test_dmx_modules.py  test_embedding.py  test_export.py  test_fake_bfp.py  test_fake_ptq.py  test_flexible_quant.py  test_fold_weights_and_biases.py  test_fx_substitute.py  test_gelu.py  test_gpt2.py  test_group_quant.py  test_groupnorm.py  test_layer_norm.py  test_layernorm.py  test_linear.py  test_monitoring.py  test_numerical.py  test_old_api.py  test_perf_proxy.py  test_qdq.py  test_qdq_transform.py  test_qtorch.py  test_qtorch_conversion.py  test_quantize_bfp.py  test_quantize_mx.py  test_retransformation.py  test_runtime_measuring.py  test_sdpa.py  test_simd_tuning.py  test_smoothquant.py  (+7 more)
tests/compiler/: compiler_lenet.py  dmir_compiler_e2e_tests.py
(+175 files in other folders)
