[tool.poetry]
name = "dmx-compressor"
version = "0.1.2"
description = "d-Matrix Compressor"
authors = ["Tristan Webb <twebb@d-matrix.ai>", "Xin Wang <xwang@d-matrix.ai>", "Michael Klachko <mklachko@d-matrix.ai>","Sayeh Sharify <sayehs@d-matrix.ai>", "Wanzin Yazar <wyazar@d-matrix.ai>", "Zifei Xu <xuzifei@d-matrix.ai>"]
include = [{ path = "tests", format = "sdist" }]
packages = [
    { include = "compressor", from = "src/dmx" },
]

[tool.poetry.dependencies]
datasets = "^2.16"
numpy = "^1.22.3"
bidict = "^0.22.0"
parse = "^1.19.0"
evaluate="^0.4.1"
graphviz="^0.20.3"
pptree = "^3.1"
pytest = "^7.1.1"
python = ">=3.8"
tqdm = "^4.0"
transformers = "^4.35.0"
torch = ">=1.12.0, <2.3"
torchvision = ">=0.13.0, <0.21.0"
diffusers = "^0.25"
accelerate = "^0.31"

[[tool.poetry.source]]
name = "dmatrix"
url = "http://pypi.d-matrix.ai"
priority = "primary"

[tool.poetry-dynamic-versioning]
vcs = "git"
style = "semver"
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
